fix: cannot import billboard issue

--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "eslint-config-next": "^13.4.3",
     "framer-motion": "^10.12.16",
     "google-map-react": "^2.2.1",
+    "js-cookie": "^3.0.5",
     "lodash": "^4.17.21",
     "next": "^13.4.3",
     "rc-slider": "^10.1.1",
