--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@tanstack/react-query-devtools": "^4.36.1",
     "axios": "^1.5.1",
     "client-only": "^0.0.1",
+    "countapi-js": "^1.0.2",
     "eslint": "8.41.0",
     "eslint-config-next": "^13.4.3",
     "framer-motion": "^10.12.16",
