--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@headlessui/react": "^1.7.14",
     "@heroicons/react": "^2.0.18",
+    "@hookform/resolvers": "^2.9.11",
     "@tailwindcss/aspect-ratio": "^0.4.2",
     "@tailwindcss/forms": "^0.5.3",
     "@tailwindcss/typography": "^0.5.9",
@@ -21,6 +22,7 @@
     "@tanstack/react-query-devtools": "^4.36.1",
     "axios": "^1.5.1",
     "client-only": "^0.0.1",
+    "cookie": "^0.5.0",
     "eslint": "8.41.0",
     "eslint-config-next": "^13.4.3",
     "framer-motion": "^10.12.16",
@@ -32,15 +34,19 @@
     "react": "^18.2.0",
     "react-datepicker": "^4.11.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.47.0",
     "react-hooks-global-state": "^2.1.0",
     "react-swipeable": "^7.0.0",
+    "react-toastify": "^9.1.3",
     "react-use": "^17.4.0",
     "react-use-keypress": "^1.3.1",
     "sass": "^1.62.1",
     "server-only": "^0.0.1",
-    "typescript": "5.0.4"
+    "typescript": "5.0.4",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
+    "@types/cookie": "^0.5.3",
     "@types/google-map-react": "^2.1.7",
     "@types/node": "20.2.3",
     "@types/react": "18.2.7",
