--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@tanstack/react-query": "^4.36.1",
     "@tanstack/react-query-devtools": "^4.36.1",
     "antd": "^5.10.3",
+    "antd-style": "^3.6.1",
     "axios": "^1.5.1",
     "client-only": "^0.0.1",
     "cookie": "^0.5.0",
