--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.47.0",
     "react-hooks-global-state": "^2.1.0",
+    "react-responsive-carousel": "^3.2.23",
     "react-swipeable": "^7.0.0",
     "react-toastify": "^9.1.3",
     "react-use": "^17.4.0",
