--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "@types/react": "18.2.7",
     "@types/react-datepicker": "^4.11.2",
     "@types/react-dom": "18.2.4",
+    "@types/react-scroll": "^1.8.10",
     "autoprefixer": "^10.4.14",
     "postcss": "^8.4.23",
     "tailwindcss": "^3.3.2"
